<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- Add new scheduler item, should appear as action button -->
    <item android:id="@+id/action_add"
        android:icon="@drawable/newtask"
        android:title="@string/action_add"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_category"
        android:icon="@drawable/category"
        android:title="@string/action_category"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <!-- Help, should appear as action button -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/about"
        android:title="@string/action_help"
        android:orderInCategory="3"
        app:showAsAction="always" />


</menu>