<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.github.skoryupina.planyourdaytoday.NewTaskActivity"
    android:background="#f0f0f0">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewCategory"
                android:src="@drawable/category"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/inputCategory"
                android:layout_width="fill_parent"
                android:dropDownHeight="wrap_content"
                android:ems="10"
                android:text="@string/task_category"
                android:background="@android:color/background_light"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewClock"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/inputStartDate"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:text="@string/task_startDate"
                android:inputType="none"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@android:color/background_light"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/inputFinishDate"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:text="@string/task_finishDate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@android:color/background_light"
                android:layout_marginLeft="34dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:text="@string/task_duration"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@android:color/background_light"
                android:layout_marginLeft="34dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewSummary"
                android:src="@drawable/summary" />

            <TextView
                android:id="@+id/inputSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_summary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic"
                android:layout_marginLeft="10dp"
                android:background="@android:color/background_light"
                android:maxLines="3"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">


            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView" >

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="3"
                    android:layout_gravity="center"
                    android:id="@+id/gridPhotos"
                    android:columnWidth="90dp"
                    android:numColumns="auto_fit"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center"

                    />
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>