<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.github.skoryupina.planyourdaytoday.ListStatisticsActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible"
        android:id="@+id/layoutForIntervalSearch">

        <ImageView
            android:id="@+id/imageViewClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clock"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/inputStartDate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="start|top"
            android:layout_marginLeft="5dp"
            android:background="@android:color/background_light"
            android:clickable="true"
            android:hint="@string/task_startDate"
            android:inputType="none"
            android:onClick="showDatePickerDialog"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/inputFinishDate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="start|top"
            android:background="@android:color/background_light"
            android:clickable="true"
            android:hint="@string/task_toDate"
            android:onClick="showDatePickerDialog"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/statByInterval"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="0dp"
            android:text="@string/refresh"
            android:onClick="getStatistics"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layoutForMonthSearch"
        android:weightSum="1">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.53"
            android:layout_marginLeft="10dp"
            android:visibility="visible"/>



        <Button
            android:id="@+id/statByMonth"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:onClick="getStatistics"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:id="@+id/categoriesChooserLayout"
        android:layout_below="@+id/layoutForMonthSearch">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvCategoriesChosen"
            android:hint="@string/categories_chooser_for_statistics"
            android:clickable="true"
            android:onClick="showDialog"
            android:background="#ceffc7"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:visibility="invisible" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/lvStatistics"
        android:background="#51d5ead4"
        android:divider="#bad6ff"
        android:dividerHeight="1dp"
        android:layout_below="@+id/categoriesChooserLayout"
        android:layout_alignParentStart="true"
        android:clickable="true"
        />
</RelativeLayout>
